<resources>
    <string name="app_name">Lepau</string>
    <string name="enter_your_password">enter your password</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_name">enter your name</string>
    <string name="start_eating">Start Eating</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="make_your_own_fried_rice">Make Your Own Fried Rice</string>
    <string name="title_activity_special_order">Lepau\'s Custom Fried Rice</string>
    <string name="action_settings">Settings</string>

    <!-- SpecialOrder Activity -->
    <string name="so_status_base">BASE</string>
    <string name="so_status_topping">TOPPING</string>
    <string name="so_status_confirm">CONFIRM</string>

    <string name="so_next">Next</string>
    <string name="so_finish">Add to Order</string>
    <string name="so_cancel">Cancel</string>
    <string name="so_rice">Rice</string>
    <string name="so_spinner_prompt">Choose rice type</string>
    <string name="so_size">Size</string>
    <string name="so_small">Small</string>
    <string name="so_medium">Medium (+3k)</string>
    <string name="so_large">Large (+5k)</string>
    <string name="so_spiciness">Spiciness Level</string>
    <string name="so_spiciness_default">Not spicy</string>
    <string name="so_status">Progress bar</string>

    <string name="so_small_alt_1">Small (-3k)</string>
    <string name="so_medium_alt_1">Medium</string>
    <string name="so_large_alt_1">Large (+2k)</string>

    <string name="so_small_alt_2">Small (-5k)</string>
    <string name="so_medium_alt_2">Medium (-2k)</string>
    <string name="so_large_alt_2">Large</string>

    <string name="so_spice_0">Not spicy</string>
    <string name="so_spice_1">Level 1</string>
    <string name="so_spice_2">Level 2</string>
    <string name="so_spice_3">Level 3</string>
    <string name="so_spice_4">Level 4</string>
    <string name="so_spice_5">Level 5</string>

    <string name="so_topping">Add toppings (@3k each)</string>
    <string name="topping_scrambled_egg">Scrambled egg</string>
    <string name="topping_sunny_side_up">Sunny side up</string>
    <string name="topping_chicken">Chicken</string>
    <string name="topping_beef">Beef</string>
    <string name="topping_seafood">Seafood</string>
    <string name="topping_cheese">Cheese</string>
    <string name="topping_vegetable">Vegetable</string>
    <string name="topping_sausage">Sausage</string>
    <string name="topping_meatball">Meatball</string>

    <string name="so_complete_order_header">Fried Rice Details</string>
    <string name="so_complete_rice">Rice</string>
    <string name="so_complete_size">Size</string>
    <string name="so_complete_spiciness">Spiciness</string>
    <string name="so_complete_topping">Topping</string>
    <string name="so_complete_price_placeholder">Rp0</string>
    <string name="so_complete_quantity_placeholder">1</string>
    <string name="so_complete_price">Price</string>
    <string name="so_complete_quantity">Quantity</string>
    <string name="so_complete_total_price">Total Price</string>
    <string name="so_complete_dec">-</string>
    <string name="so_complete_inc">+</string>

    <string name="so_ricetype_white">White rice</string>
    <string name="so_ricetype_jasmine">Jasmine rice</string>
    <string name="so_ricetype_brown">Brown rice</string>
    <string name="so_ricetype_sticky">Sticky rice</string>

    <string name="so_size_small">Small</string>
    <string name="so_size_medium">Medium</string>
    <string name="so_size_large">Large</string>

    <string name="so_spiciness_0">Not spicy</string>
    <string name="so_spiciness_1">Level 1 spiciness</string>
    <string name="so_spiciness_2">Level 2 spiciness</string>
    <string name="so_spiciness_3">Level 3 spiciness</string>
    <string name="so_spiciness_4">Level 4 spiciness</string>
    <string name="so_spiciness_5">Level 5 spiciness</string>

    <string name="so_topping_0">Topping (0)</string>
    <string name="so_topping_1">Topping (1)</string>
    <string name="so_topping_2">Topping (2)</string>
    <string name="so_topping_3">Topping (3)</string>
    <string name="so_topping_4">Topping (4)</string>
    <string name="so_topping_5">Topping (5)</string>
    <string name="so_topping_6">Topping (6)</string>
    <string name="so_topping_7">Topping (7)</string>
    <string name="so_topping_8">Topping (8)</string>
    <string name="so_topping_9">Topping (9)</string>

    <!-- TrackingOrder Activity -->
    <string name="to_desc">Image Description</string>

    <string name="to_status_waiting">WAIT</string>
    <string name="to_status_cooking">COOK</string>
    <string name="to_status_delivering">DELIVER</string>

    <string name="to_status_waiting_info">Waiting for confirmation from our Dapur</string>
    <string name="to_status_cooking_info">Your order is being cooked</string>
    <string name="to_status_delivering_info">Our driver is on the way</string>

    <string name="to_confirm_delivery">Finish Order</string>

    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_order_menu">OrderMenu</string>
    <string name="title_activity_track_order">TrackOrderActivity</string>

    <string name="sa_hint">What would you like to eat?</string>

    <string name="finding_location">Finding Location</string>
    <string name="searching_menu">Searching for menu</string>
    <string name="order_history">Order History</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="total">Total</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="rp">Rp</string>
    <string name="menu">Menu</string>
    <string name="price">Price</string>
    <string name="qty">Qty.</string>
    <string name="subtotal">Subtotal</string>
    <string name="menu_list">Menu List</string>
    <string name="price_rp">Price: Rp</string>
    <string name="menu_title">Menu Title</string>
    <string name="menu_description">Menu Description</string>
    <string name="decrement">-</string>
    <string name="zero">0</string>
    <string name="increment">+</string>
    <string name="search">Search</string>
    <string name="tracking_order">Tracking Order</string>
    <string name="delivery_cost_price">2000</string>
    <string name="menu_book">Menu List</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="dipatiukur">Dipatiukur</string>
    <string name="cisitu">Cisitu</string>
    <string name="pelesiran">Pelesiran</string>
    <string name="preferred_dapur">Preferred Kitchen</string>
    <string name="general">General</string>

    <string name="white_rice">White rice (10k)</string>
    <string name="jasmine_rice">Jasmine rice (12k)</string>
    <string name="brown_rice">Brown rice (14k)</string>
    <string name="sticky_rice">Sticky rice (14k)</string>

    <string name="bacon_eggs">Bacon and Eggs</string>
    <string name="curry">Curry</string>
    <string name="indomie">Indomie</string>
    <string name="ketupat">Ketupat</string>
    <string name="omelette">Omelette</string>
    <string name="french_toast">French Toast</string>

    <string name="bacon_eggs_desc">Is there any better start to the day than bacon and eggs?</string>
    <string name="curry_desc">Savory and hearty Japanese beef curry recipe made with beef, potatoes, carrots, mushroom, and Japanese curry roux.</string>
    <string name="indomie_desc">Instant Noodles are made from carefully selected ingredients, the best quality flour and fresh spices from the natural resources of Indonesia.</string>
    <string name="ketupat_desc">One of the most popular Malaysian traditional delicacies made from glutinous rice.</string>
    <string name="omelette_desc">Our omelettes look like they are made-to-order because they are - with eggs filled with your choice of fresh vegetables, meats and cheeses and rolled.</string>
    <string name="french_toast_desc">Slices of bread are soaked or dipped in a mixture of beaten eggs, often whisked with milk or cream.</string>
    <string name="press_back_again_to_leave">Press back again to leave</string>
    <string name="your_order_is_empty">Your order is empty</string>
    <string name="searching_for">"Searching for "</string>
    <string name="quantity_cant_be_negative">Quantity can\'t be negative</string>
    <string name="delivery_confirmed">Delivery confirmed by manager, thank you for using Lepau</string>
    <string name="enjoy_your_meal">Enjoy Your Meal!</string>
    <string name="have_you_received_your_order">Have you received your order?</string>
    <string name="thank_you_for_using_lepau">Thank you for using Lepau</string>
    <string name="not_yet">Not yet</string>
    <string name="yes">Yes</string>
    <string name="sign_out">Sign Out</string>
    <string name="custom_fried_rice">Custom Fried Rice</string>
    <string name="lepau_specialty">Lepau\'s specialty! Make your own fried rice.</string>

</resources>
