<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kami.lepau.SpecialOrderToppingFragment">

    <ImageView
        android:id="@+id/so_topping_status"
        android:contentDescription="@string/so_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/so_topping_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textSize="24sp"
                android:text="@string/so_topping"/>

            <CheckBox android:id="@+id/so_topping_scrambled_egg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_scrambled_egg"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/so_topping_sunny_side_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_sunny_side_up"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/so_topping_chicken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_chicken"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/so_topping_beef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_beef"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/so_topping_seafood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_seafood"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/so_topping_cheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_cheese"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/so_topping_vegetable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_vegetable"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/so_topping_sausage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_sausage"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/so_topping_meatball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_meatball"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="18sp"
                android:onClick="onCheckboxClicked"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/so_base_next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@color/gold"
        android:textSize="18sp"
        android:text="@string/so_next"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
