<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kami.lepau.SpecialOrderBaseFragment"
    android:background="@color/beige">

    <LinearLayout
        android:id="@+id/so_complete_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBrown"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/so_complete_status_seekbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:thumb="@drawable/thumb_arrow"
            android:thumbTint="@color/gold"
            android:splitTrack="false"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
            android:progress="2"
            android:max="2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/so_status_base"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/mocca"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/so_status_topping"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/mocca"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:text="@string/so_status_confirm"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/gold"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/so_complete_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="80dp"
        android:layout_below="@id/so_complete_status"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:textSize="24sp"
                    android:textColor="@color/darkBrown"
                    android:text="@string/so_complete_order_header"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/so_complete_rice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/so_complete_rice"
                        android:textSize="18sp"
                        android:layout_weight="3"/>

                    <TextView
                        android:id="@+id/so_complete_rice_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/so_complete_price_placeholder"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/so_complete_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/so_complete_size"
                        android:textSize="18sp"
                        android:layout_weight="3"/>

                    <TextView
                        android:id="@+id/so_complete_size_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/so_complete_price_placeholder"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/so_complete_spiciness"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/so_complete_spiciness"
                        android:textSize="18sp"
                        android:layout_weight="3"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/so_complete_price_placeholder"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/so_complete_topping"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/so_complete_topping"
                        android:textSize="18sp"
                        android:layout_weight="3"/>

                    <TextView
                        android:id="@+id/so_complete_topping_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/so_complete_price_placeholder"
                        android:textAlignment="textEnd"
                        android:textSize="18sp"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

            <View android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                style="@style/LepauDivider.Thin" android:background="@color/gold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/so_complete_price"
                    android:textSize="18sp"
                    android:layout_weight="3"/>

                <TextView
                    android:id="@+id/so_complete_item_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/so_complete_price_placeholder"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <View style="@style/LepauDivider.Thick"
                android:layout_marginTop="16dp"
                android:background="@color/darkBrown"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/so_complete_quantity"
                    android:textSize="24sp"
                    android:textColor="@color/darkBrown"
                    android:layout_weight="2"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/so_complete_dec_quantity"
                        android:layout_width="0dp"
                        android:layout_height="28dp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:background="@color/mediumBrown"
                        android:text="@string/so_complete_dec"
                        android:textColor="@color/gold"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/so_complete_quantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/so_complete_quantity_placeholder"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:layout_weight="2"/>

                    <Button
                        android:id="@+id/so_complete_inc_quantity"
                        android:layout_width="0dp"
                        android:layout_height="28dp"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:background="@color/mediumBrown"
                        android:text="@string/so_complete_inc"
                        android:textColor="@color/gold"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/so_complete_total_price"
                    android:textSize="24sp"
                    android:textColor="@color/darkBrown"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/so_complete_total_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/so_complete_price_placeholder"
                    android:textAlignment="textEnd"
                    android:textSize="24sp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/so_complete_finish"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/gold"
        android:textSize="18sp"
        android:text="@string/so_finish" />


</RelativeLayout>
